@@ -10232,6 +10232,12 @@
 			RelativePath="ql\instrument.hpp">
 		</File>
 		<File
+			RelativePath=".\ql\interestrate.cpp">
+		</File>
+		<File
+			RelativePath=".\ql\interestrate.hpp">
+		</File>
+		<File
 			RelativePath=".\ql\money.cpp">
 		</File>
 		<File
